Fix environment variable annotations
