# storage/api-docs/api-docs.json
@@ -94,7 +94,7 @@
                 "tags": [
                     "Environment Variables"
                 ],
-                "summary": "Returns all environmentVariables that the user has access to",
+                "summary": "Returns all environmentVariables that the user has access to. For security, values are not included.",
                 "operationId": "getEnvironmentVariables",
                 "parameters": [
                     {
@@ -124,17 +124,12 @@
                                             "description": "Fetch a collection of variables based on paged request and filter if provided",
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/environment_variables"
+                                                "$ref": "#/components/schemas/EnvironmentVariable"
                                             }
                                         },
                                         "meta": {
                                             "description": "Fetch a collection of variables based on paged request and filter if provided",
-                                            "type": "object",
-                                            "allOf": [
-                                                {
-                                                    "$ref": "#/components/schemas/metadata"
-                                                }
-                                            ]
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -148,14 +143,14 @@
                 "tags": [
                     "Environment Variables"
                 ],
-                "summary": "Save a new environment_variables",
-                "operationId": "createEnvironmentVariables",
+                "summary": "Create a new environment variable",
+                "operationId": "createEnvironmentVariable",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/create_environment_variablesEditable"
+                                "$ref": "#/components/schemas/EnvironmentVariableEditable"
                             }
                         }
                     }
@@ -166,7 +161,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/environment_variables"
+                                    "$ref": "#/components/schemas/EnvironmentVariable"
                                 }
                             }
                         }
@@ -174,31 +169,31 @@
                 }
             }
         },
-        "/environment_variables/{environment_variables_id}": {
+        "/environment_variables/{environment_variable_id}": {
             "get": {
                 "tags": [
                     "Environment Variables"
                 ],
-                "summary": "Get single environment_variables by ID",
-                "operationId": "getEnvironmentVariablesById",
+                "summary": "Get an environment variable by id. For security, the value is not included.",
+                "operationId": "getEnvironmentVariableById",
                 "parameters": [
                     {
-                        "name": "environment_variables_id",
+                        "name": "environment_variable_id",
                         "in": "path",
                         "description": "ID of environment_variables to return",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Successfully found the environment variable",
+                    "201": {
+                        "description": "success",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/environment_variables"
+                                    "$ref": "#/components/schemas/EnvironmentVariable"
                                 }
                             }
                         }
@@ -209,16 +204,16 @@
                 "tags": [
                     "Environment Variables"
                 ],
-                "summary": "Update a environment_variables",
-                "operationId": "updateEnvironmentVariables",
+                "summary": "Update an environment variable",
+                "operationId": "updateEnvironmentVariable",
                 "parameters": [
                     {
-                        "name": "environment_variables_id",
+                        "name": "environment_variable_id",
                         "in": "path",
-                        "description": "ID of environment_variables to return",
+                        "description": "ID of environment variables to update",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer"
                         }
                     }
                 ],
@@ -227,7 +222,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/environment_variablesEditable"
+                                "$ref": "#/components/schemas/EnvironmentVariableEditable"
                             }
                         }
                     }
@@ -238,7 +233,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/environment_variables"
+                                    "$ref": "#/components/schemas/EnvironmentVariable"
                                 }
                             }
                         }
@@ -249,29 +244,22 @@
                 "tags": [
                     "Environment Variables"
                 ],
-                "summary": "Delete a environment_variables",
-                "operationId": "deleteEnvironmentVariables",
+                "summary": "Delete an environment variable",
+                "operationId": "deleteEnvironmentVariable",
                 "parameters": [
                     {
-                        "name": "environment_variables_id",
+                        "name": "environment_variable_id",
                         "in": "path",
                         "description": "ID of environment_variables to return",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/environment_variables"
-                                }
-                            }
-                        }
+                        "description": "success"
                     }
                 }
             }
@@ -3333,7 +3321,7 @@
         "/scripts/{scripts_id}/duplicate": {
             "put": {
                 "tags": [
-                    "scripts"
+                    "Scripts"
                 ],
                 "summary": "duplicate a script",
                 "operationId": "duplicateScreen",
@@ -3911,49 +3899,41 @@
                     }
                 ]
             },
-            "environment_variablesEditable": {
+            "EnvironmentVariableEditable": {
                 "properties": {
                     "name": {
                         "type": "string"
                     },
                     "description": {
                         "type": "string"
-                    }
-                },
-                "type": "object"
-            },
-            "create_environment_variablesEditable": {
-                "properties": {
+                    },
                     "value": {
                         "type": "string"
                     }
                 },
-                "type": "object",
-                "allOf": [
-                    {
-                        "$ref": "#/components/schemas/environment_variablesEditable"
-                    }
-                ]
+                "type": "object"
             },
-            "environment_variables": {
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "id"
-                    },
-                    "created_at": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "updated_at": {
-                        "type": "string",
-                        "format": "date-time"
-                    }
-                },
-                "type": "object",
+            "EnvironmentVariable": {
                 "allOf": [
                     {
-                        "$ref": "#/components/schemas/environment_variablesEditable"
+                        "$ref": "#/components/schemas/EnvironmentVariableEditable"
+                    },
+                    {
+                        "properties": {
+                            "id": {
+                                "type": "integer",
+                                "format": "id"
+                            },
+                            "created_at": {
+                                "type": "string",
+                                "format": "date-time"
+                            },
+                            "updated_at": {
+                                "type": "string",
+                                "format": "date-time"
+                            }
+                        },
+                        "type": "object"
                     }
                 ]
             },
